Remove flakiness